# solengine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  editor.bat  err.txt  github.bat  imgui.ini  install.bat  review.md  runDemo.bat  space_bare.txt  space_shutdown.txt  voxel_crash.txt  voxel_run.txt  wipe.bat
.r2/: workspace.json
ACLib/: ACA_conf.ini
Docs/: GRAPICS-RESEARCH.md  aaa-engine-architecture.md
Docs/.obsidian/: workspace.json
Docs/DevLog/: LOG1.md  LOG2.md  LOG3 AI verdict.md
Documentation/: GRAPICS-RESEARCH.md
Documentation/.obsidian/: workspace.json
Website/: astro.config.mjs  package-lock.json  package.json  schema.sql  wrangler.toml
Website/scripts/: fix-wrangler.mjs
Website/src/: env.d.ts  middleware.ts
Website/src/components/: SiteHeader.astro  StarlightHeader.astro
Website/src/content/docs/: index.mdx
Website/src/content/docs/docs/: getting-started.md  index.mdx
Website/src/content/docs/reference/: lua-api.md  material-editor.md  node-types.md
Website/src/layouts/: BaseLayout.astro
Website/src/lib/: nanoid.ts  session.ts
Website/src/pages/: download.astro  index.astro  yourpage.astro
Website/src/pages/api/auth/: callback.ts  login.ts  logout.ts
Website/src/pages/api/posts/: create.ts
Website/src/pages/forum/: [slug].astro  index.astro  new.astro
Website/src/styles/: custom.css
cmake/: Dependencies.cmake  SolGame.cmake  SpvToHeader.cmake
demo/: CMakeLists.txt  project.sol
demo/assets/apoc/: Read me.txt
demo/assets/textures/Dirt/Dirt_01/: Dirt_01_ambientocclusion.png.import  Dirt_01_basecolor.png.import  Dirt_01_height.png.import  Dirt_01_metallic.png.import  Dirt_01_normal.png.import  Dirt_01_roughness.png.import
demo/scenes/: apoc.solscene  city.solscene  hidden_alley.solscene  main.solscene  model.solscene  nightclub.solscene  outdoor_day.solscene  pbr_studio.solscene  pcss_test.solscene  player.solscene  room.solscene  sunset.solscene  vsm_test.solscene  world.solscene
demo/scripts/: float_sphere.lua  fps_player.lua  pulse_light.lua  rotate_y.lua  spawner.lua  trigger_zone.lua
demo/src/: demo.cpp  test.lua
demos/space/: CMakeLists.txt  space.cpp
demos/voxel/: CMakeLists.txt  voxel.cpp
editor/: CMakeLists.txt  resources.qrc
editor/src/: editor_ui.cpp  editor_ui.h  main.cpp  main_window.cpp  main_window.h  project_launcher.cpp  project_launcher.h  style.qss  undo_redo.cpp  undo_redo.h  viewport_widget.cpp  viewport_widget.h
editor/src/panels/: asset_browser_panel.cpp  asset_browser_panel.h  console_panel.cpp  console_panel.h  hierarchy_panel.cpp  hierarchy_panel.h  inspector_panel.cpp  inspector_panel.h
editor/src/style/: fa_icons.h  sol_widgets.cpp  sol_widgets.h  ue5_theme.cpp  ue5_theme.h
editor/src/widgets/: asset_path_field.cpp  asset_path_field.h  number_field.cpp  number_field.h  section_header.cpp  section_header.h  toggle_switch.cpp  toggle_switch.h  vec3_field.cpp  vec3_field.h
engine/: CMakeLists.txt
engine/include/sol/: api.h  ecs.h  ecs_world.h  engine.h  export.h  host.h  log.h  reflect.h  signal.h
engine/include/sol/audio/: audio_engine.h
engine/include/sol/ecs/: mass_command_buffer.h
engine/include/sol/input/: input_manager.h
engine/include/sol/perf/: profiler.h
engine/include/sol/project/: project.h
engine/include/sol/render/: camera.h  light.h  material.h  mesh.h  render_settings.h  renderer.h  texture.h
engine/include/sol/scene/: actor.h  area3d.h  audio_stream_player.h  audio_stream_player3d.h  camera3d.h  character_body3d.h  collision_shape3d.h  component.h  fly_cam_controller.h  light_node.h  lua_component.h  mesh_node.h  model_node.h  node.h  node3d.h  node_factory.h  node_handle.h  processor.h  rigid_body3d.h  scene.h  scene_instance.h  scene_manager.h  script_node.h  static_body3d.h  world_environment.h
engine/include/sol/script/: script_engine.h
engine/include/sol/world/: world_partition.h
engine/src/: ecs_world.cpp  engine.cpp  host.cpp  log.cpp  main.cpp  main_monolithic.cpp  reflect.cpp
engine/src/asset/: blend_loader.cpp  blend_loader.h  fbx_loader.cpp  fbx_loader.h  gltf_loader.cpp  gltf_loader.h  model_loader.cpp  model_loader.h  stb_impl.cpp
engine/src/audio/: audio_engine.cpp
engine/src/input/: input_manager.cpp
engine/src/perf/: profiler.cpp
engine/src/physics/: physics.cpp  physics.h
engine/src/platform/: window.cpp  window.h
engine/src/project/: project.cpp
engine/src/render/: bgfx_renderer.h  mesh.cpp  renderer.cpp  renderer.h  texture.cpp
engine/src/render/shaders/: bloom_blur.frag.glsl  bloom_bright.frag.glsl  deferred_light.frag.glsl  depth_pre.frag.glsl  depth_pre.vert.glsl  equirect_to_cube.frag.glsl  forward_plus.frag.glsl  fs_basic.sc  fs_bloom_blur.sc  fs_bloom_bright.sc  fs_pbr.sc  fs_post.sc  fs_shadow.sc  fs_sky.sc  fullscreen.vert.glsl  gbuf.frag.glsl  ibl_brdf_lut.frag.glsl  ibl_irradiance.frag.glsl  ibl_prefilter.frag.glsl  ibl_sky_capture.frag.glsl  pbr.frag.glsl  shadow.vert.glsl  shadow_vsm.frag.glsl  sky.frag.glsl  ssao.frag.glsl  ssao_blur.frag.glsl  ssr.frag.glsl  ssr_temporal.frag.glsl  taa.frag.glsl  tonemap.frag.glsl  varying.def.sc  varying_fullscreen.def.sc  varying_pbr.def.sc  varying_shadow.def.sc  varying_sky.def.sc  vs_basic.sc  vs_pbr.sc  vs_shadow.sc  vs_sky.sc
engine/src/render/vk/: vk_buffer.cpp  vk_buffer.h  vk_common.h  vk_context.cpp  vk_context.h  vk_desc.cpp  vk_desc.h  vk_image.cpp  vk_image.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_swapchain.cpp  vk_swapchain.h
engine/src/scene/: actor.cpp  audio_nodes.cpp  fly_cam_controller.cpp  lua_component.cpp  node_factory.cpp  node_handle.cpp  physics_nodes.cpp  scene.cpp  scene_manager.cpp
engine/src/script/: script_engine.cpp
engine/src/ui/: ImGuizmo.cpp  fa_font_embedded.h  imgui_layer.cpp  imgui_layer.h
engine/src/world/: world_partition.cpp
example_scripts/: blink_light.lua  door.lua  hello.lua  rotate.lua  simple_fps.lua  spawner.lua
installer/: SolEngine.iss
runtime/: CMakeLists.txt
runtime/src/: main.cpp
tools/: install_shortcuts.ps1
(+684 files in other folders)
